--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: yourusername/yourrepo
-  branch: main
+  branch: gh-pages
   auth_type: pkce
   client_id: Ov23liaEHD59Q0sfR1yI
 
