--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,11 +1,8 @@
 backend:
-  name: github
-  repo: yourusername/yourrepo
-  branch: gh-pages
-  auth_type: pkce
-  client_id: Ov23liaEHD59Q0sfR1yI
+  name: git-gateway
+  branch: main
 
-media_folder: "images"
+media_folder: "images" 
 public_folder: "/images"
 
 collections:
@@ -13,10 +10,9 @@ collections:
     label: "Articles"
     folder: "_posts"
     create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Category", name: "category", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Author", name: "author", widget: "string", default: "Editor"}
-      - {label: "Excerpt", name: "excerpt", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
