--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,11 @@
 backend:
-  name: git-gateway
-  branch: main
+  name: github
+  repo: worstgen/futures-bright
+  branch: gh-pages
+  auth_type: pkce
+  client_id: Ov23liaEHD59Q0sfR1yI
 
-media_folder: "images" 
+media_folder: "images"
 public_folder: "/images"
 
 collections:
@@ -10,9 +13,10 @@ collections:
     label: "Articles"
     folder: "_posts"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Category", name: "category", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Author", name: "author", widget: "string", default: "Editor"}
+      - {label: "Excerpt", name: "excerpt", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
