--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: worstgen/futures-bright
   branch: gh-pages
   auth_type: pkce
-  client_id: Ov23liaEHD59Q0sfR1yI
+  base_url: https://api.github.com
 
 media_folder: "images"
 public_folder: "/images"
