--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: worstgen/futures-bright
+  repo: WorstGen/futures-bright
   branch: gh-branch
   auth_type: pkce
   base_url: https://api.github.com
